# WaterQuality

./: LICENSE.md  README.md  example.ipynb  setup.cfg  setup.py
data/: E0_sun.txt  R_b.txt  a_oxygen.txt  a_ozone.txt  a_phy_spec.txt
water_quality/: .gitignore  __init__.py
water_quality/atmosphere/: ET_solar_irradiance.py  __init__.py  absorption.py  downwelling_irradiance.py  sky_radiance.py  transmittance.py
water_quality/data/: a_w.txt  a_wv.txt  b_phy_norm.txt  daWdT.txt
water_quality/helper/: __init__.py  resampling.py
water_quality/model/: __init__.py  model.py
water_quality/surface/: __init__.py  air_water.py  surface.py
water_quality/water/: __init__.py  absorption.py  albert_mobley.py  attenuation.py  backscattering.py  bottom_reflectance.py  temperature_gradient.py
