[metadata]
name = water_quality
version = 0.0.1
author = Marcel Koenig
author_email = mkoenig3@asu.edu
license = Apache-2.0
description = Bio-optical modelling for Carbon Mapper water quality applications.
long_description = file: README.md
url = https://github.com/CMLandOcean/WaterQuality
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir =
    = water_quality
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.21.5
    scipy >= 1.7.3
    pandas >= 1.3.5
    spectral >= 0.22.4
    lmfit >= 1.0.3    
[options.packages.find]
where = water_quality